--- a/src/app/advertising/components/advertising-list/advertising-list.component.html
+++ b/src/app/advertising/components/advertising-list/advertising-list.component.html
@@ -59,6 +59,8 @@
         <div>coutParVueCible: {{advertising.coutParVueCible}}</div>
         <div>gainPublicitaire: {{advertising.gainPublicitaire}}</div>
         <div>nbrVuesFinal: {{advertising.nbrVuesFinal}}</div>
+        <a ><img [src]="'assets/PiDevFiles/'+ advertising.image"></a>
+
       </mat-card-content>
       <mat-card-actions>
         <div style="display: flex; justify-content: center"> 
